test/types/file/freadNoInt.good
freadNoInt.chpl:5: error: halt reached - ***Error: No int was read***
